<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smtpHost"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/smtpHost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/smtpHost"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smtpPort"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/smtpPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/smtpPort"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/smtpUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/from"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pwd"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/smtpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pwd"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/toEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/to"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subj"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/subj"
                android:importantForAutofill="no"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:ems="10"
                android:gravity="top|start"
                android:hint="@string/enter_msg"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="8"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filePwd"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/filePass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/file_pass_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/encryptHint"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/origin_file_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/select_file"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="15sp" />

            <Button
                android:id="@+id/select_origin_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/file"
                android:textSize="15sp" />

            <Button
                android:id="@+id/md51"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/md5"
                android:textSize="15sp" />

            <Button
                android:id="@+id/encode_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/encrypt"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decryptHint"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/encoded_file_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/select_file"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textSize="15sp" />

            <Button
                android:id="@+id/select_encoded_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/file" />

            <Button
                android:id="@+id/md52"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/md5" />

            <Button
                android:id="@+id/decode_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/decrypt" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/send_mail_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#00000000"
                android:drawableStart="@drawable/send"
                android:text="@string/send_mail" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>